Выполнить замечания ревьюера